$Id$

2016-08-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: LaCie (0x059f:0x1075) (ticket #718)
	- USB: Seagate Expansion External (0x0bc2:0x3322) (ticket #706)
	- USB: Seagate FreeAgent GoFlex (0x0bc2:0x5030) (ticket #720)
	- USB: Seagate Backup Plus Desktop (0x0bc2:0xab34) (ticket #700)

2016-05-31  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Intel 311/313 Series SSDs: mSATA, *H (HP) variant
	- Intel 520 Series SSDs: *L (Lenovo) variant
	- HGST Ultrastar He6/He8: attribute 22 "Helium_Level"
	- Western Digital Red: 8TB, attribute 22 "Helium_Level"
	- USB: WD My Passport Ultra (0x1058:0x0837) (ticket #696)
	- USB: WD My Passport (0x1058:0x083a)
	- USB: WD My Book (0x1058:0x111d)

2016-05-10  Christian Franke  <franke@computer.org>

	os_openbsd.cpp: Compile fix (regression from r4156).

	os_netbsd.cpp: Apply patch-os__netbsd.cpp 1.3 (2016-05-08) from
	pkgsrc.se/sysutils/smartmontools:
	- Compile fix (regression from r4156).
	- Use a raw disk device file on NetBSD.

2016-05-07  Christian Franke  <franke@computer.org>

	smartmontools 6.5

2016-05-06  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Samsung SpinPoint P80 SD: *J/P variant
	- Seagate Samsung SpinPoint M7E
	- Hitachi/HGST Travelstar Z5K500: *E680 variant
	- Hitachi Travelstar 7K500: HITACHI variant
	- Hitachi Ultrastar 7K3000: *A641 variant
	- HGST Ultrastar He8
	- Toshiba 2.5" HDD MQ01ABD...: *V variant
	- Seagate Desktop HDD.15: 5TB
	- Seagate SV35.3
	- Seagate SV35: *0001 variant
	- Seagate DB35: SATA variant
	- Western Digital Blue: 2-6TB, *Z variant
	- Western Digital RE4-GP: *2003* variant
	- Western Digital Re: Rename, 2-6TB
	- Western Digital Caviar Green: SATA 6Gb/s variant
	- Western Digital Caviar Black: *7501AAES*
	- Western Digital Blue Mobile: 2TB
	- Western Digital Elements / My Passport (USB, AF): *7500B*, 3TB

2016-05-01  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Samsung based SSDs: 840 EVO 750GB (ticket #692), 850 EVO M.2,